kube/cheerpweb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cheerpweb
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: cheerpwebapp
        tier: cheerpweb
    spec:
      containers:
      - name: cheerpwebcontainer
        image: rayburgemeestre/cheerpweb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: cheerpweb
  labels:
    app: cheerpwebapp
    tier: cheerpweb
spec:
  type: NodePort 
  ports:
  - port: 80
    name: http
  selector:
    app: cheerpwebapp
    tier: cheerpweb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cheerpapi
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: cheerpapiapp
        tier: cheerpapi
    spec:
      containers:
      - name: cheerpapicontainer
        image: rayburgemeestre/cheerp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - mountPath: "/data"
          name: cheerpstorage
      volumes:
      - name: cheerpstorage
        persistentVolumeClaim:
         claimName: cheerp-api-claim
---
apiVersion: v1
kind: Service
metadata:
  name: cheerpapi
  labels:
    app: cheerpapiapp
    tier: cheerpapi
spec:
  type: NodePort 
  ports:
  - port: 5000
    name: http
  selector:
    app: cheerpapiapp
    tier: cheerpapi
